# sp-webdav-tool

./: .env.example  .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_usage.py  hermes_config.yaml
src/sp_webdav_tool/: __init__.py  cli.py  client.py  hermes_adapter.py  models.py  operations.py  settings.py
tests/: test_client.py  test_models.py  test_operations.py
tests/fixtures/: main_minimal.json
