[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sp-webdav-tool"
version = "0.1.1"
description = "WebDAV client for Super Productivity task management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Zombiehamser" }
]
keywords = ["super-productivity", "webdav", "tasks", "productivity", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-httpx>=0.30,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
sp-webdav = "sp_webdav_tool.cli:app"

[project.urls]
Homepage = "https://github.com/Zombiehamser/sp-webdav-tool"
Repository = "https://github.com/Zombiehamser/sp-webdav-tool"
Issues = "https://github.com/Zombiehamser/sp-webdav-tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sp_webdav_tool"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unused_ignores = true
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"